--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,13 @@
 # Nome da Actions:  
 name: Snake Game
 
-# Controlador do tempo que será feito a atualização dos arquivos.
+# Controlador do tempo que sera feito a atualização dos arquivos.
 on:
   schedule:
-    # Será atualizado a cada 5 horas.
+      # Será atualizado a cada 5 horas.
     - cron: "0 */5 * * *"
 
-  # Permite executar na lista de Actions (utilizado para testes de build).
+# Permite executar na na lista de Actions (utilizado para testes de build).
   workflow_dispatch:
 
 # Regras
@@ -16,10 +16,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      # Checks repo under $GITHUB_WORKSPACE, para que o job possa acessar o repositório.
+    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
       - uses: actions/checkout@v2
 
-      # Repositório que será utilizado para gerar os arquivos.
+    # Repositorio que será utilizado para gerar os arquivos.
       - uses: Platane/snk@master
         id: snake-gif
         with:
@@ -27,10 +27,9 @@ jobs:
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-      # Verifica o status do repositório (opcional para debug).
       - run: git status
 
-      # Para realizar atualizações no repositório.
+      # Para as atualizações.
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
@@ -38,10 +37,9 @@ jobs:
           branch: master
           force: true
 
-      # Publica os arquivos no branch `output`.
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          # Branch de saída mencionado acima.
+          # the output branch we mentioned above
           target_branch: output
           build_dir: dist
         env:
